--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-admin-template",
   "version": "4.2.1",
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "author": "sw-code <songwuxingxox@outlook.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
@@ -24,6 +24,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-cropper": "^0.5.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
