--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
     "vue-cropper": "^0.5.2",
+    "vue-particles": "^1.0.9",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
